--- a/src/assets/less/common.less
+++ b/src/assets/less/common.less
@@ -24,7 +24,7 @@ body {
     width: 24px;
     height: 24px;
     display: inline-block;
-    background: url( "/assets/img/fqt-todo24.png" ) no-repeat left top;
+    background: url( "/assets/img/logo24.png" ) no-repeat left top;
     margin-bottom: -6px;
 }
 
